# Job-Recommender-System

./: .excalidraw  .gitignore  README.md  app.py  l.ipynb  main.py  pyproject.toml  requirements.txt  template.sh
app/: form.py
backend/: main.py
backend/app/: test_st.py
chroma_langchain_db/: chroma.sqlite3
config/: config.dev.ini  config.dev.yaml
job_recommender/: __init__.py
job_recommender/src/: __init__.py
job_recommender/src/agents/: agent_state.py  llm_agent.py
job_recommender/src/core/: api_key_config.py  settings.py  (+5 more)
rec_system/client/: __init__.py  embeddings.py  llm.py
rec_system/nodes/: __init__.py  create_custom_plan_node.py  missing_skills_extractor_node.py  read_store_vec_store_node.py  skills_extractor_node.py  summary_node.py
rec_system/prompts/: __init__.py  create_custom_plan_node_prompt.py  missing_skills_extractor_node_prompt.py  skills_extractor_node_prompt.py  summarizer_node_prompt.py
rec_system/schemas/: __init__.py  graph_state.py  parsers.py  schemas.py
rec_system/tools/: __init__.py  search_tool.py
rec_system/utils/: __init__.py  handle_config.py  handle_exception.py  handle_logging.py
rec_system/vectorstore/: __init__.py  chroma_db.py
rec_system/workflow/: __init__.py  graph.py
research/: browser_mcp.json  reaseach02.ipynb  research01.ipynb  sample.txt  test.py  test_agent.py  test_rag_agent.ipynb
src/: __init__.py
src/job_recommender/: __init__.py
system/client/: embeddings.py
system/schemas/: __init__.py  graph_state.py
system/utils/: __inti__.py  handle_config.py
system/vectorstore/: __init__.py  chroma_db.py
test/: test_config_loader.py  test_model_loader.py
(+49 files in other folders)
