[project]
name = "job-recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify>=3.0.5",
    "fastapi[standard]>=0.123.9",
    "ipykernel>=7.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.0",
    "langchain-mistralai>=1.0.1",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "mcp-use>=1.4.0",
    "numpy>=2.3.5",
    "pinecone>=7.3.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.3.0",
    "pytest>=9.0.1",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
]
